about page update

--- a/about.html
+++ b/about.html
@@ -3,74 +3,114 @@ layout: default
 title: About
 ---
 
-
-<h2>Biography</h2>
-<p> Hi! I'm Zimu, a senior Computer Engineering student from the joint institute of <a href="https://www.zju.edu.cn/english/">Zhejiang University</a> - 
-    <a href="https://illinois.edu/"> University of Illinois at Urbana-Champaign</a>. I'm interested in <b>computer graphics</b> (especially <b>physically based simulation</b>) and
-    <b>high-performance computing</b>. It is because I'm a big fan of <b>Math & Arts</b>:
-</p>
-<p>
-    Outside of the classroom, I've been studying math on my own, 
-    some of my learning notes (in Chinese) are posted <a href="./">here</a>. I am always fascinated by the process of generalization in mathematics, 
-    that's why I chose the word, <b>"Abstractness is the price of Generality"</b>, as the tagline for my website. It is said by <a href="https://www.3blue1brown.com/about">3Blue1Brown</a>, 
-    the initiation of my interest in math.
-</p>
-<p>
-    In my leisure time, I often draw, photograph or do some design. 
-    You can see some of my art work <a href="gallery.html">here</a>.
-</p>
-
-
-<h2>Education</h2>
-<div class="row">
-    <div class="col-sm-1-pad" align="center">
-        <p><img src="assets/img/uiuc.png" class="img-fluid"></a></p>
+<div class = "row">
+    <div class="col-sm-5 center-pad" align="center">
+        <p><img src="assets/img/me.jpg" class="img-fluid"></a></p>
     </div>
-    <div class="col-sm-11">
-        <p><b>University of Illinois, Urbana-Champaign</b>, Sep. 2018 - Present<br>
-            B.S. in Computer Engineering<br>
-        </p>
-    </div>
-</div>
-<div class="row">
-    <div class="col-sm-1-pad" align="center">
-        <p><img src="assets/img/zju.png" class="img-fluid"></a></p>
-    </div>
-    <div class="col-sm-11">
-        <p><b>Zhejiang University</b>, Sep. 2018 - Present<br>
-            B.E. in Electronics and Computer Engineering<br>
-        </p>
+    <div class="col-sm-7 text-center">
+        <h1>Zimu Guan</h1>
+        <ul>
+            <li>Email: <a href="zimug2@illinois.edu">zimug2@illinois.edu</a></li>
+            <li>GitHub: <a href="https://github.com/TaKeTube">TaKeTube</a></li>
+            <li>Linkedin: Zimu Guan</li>
+        </ul>
     </div>
 </div>
 
 
-<div class="container">
+<div class = "experience">
+    <h2>Biography</h2>
+    <p> Hi! I'm Zimu, a senior Computer Engineering student from the joint institute of <a href="https://www.zju.edu.cn/english/">Zhejiang University</a> - 
+        <a href="https://illinois.edu/"> University of Illinois at Urbana-Champaign</a>. I'm interested in <b>computer graphics</b> (especially <b>physically based simulation</b>) and
+        <b>high-performance computing</b>. It is because I'm a big fan of <b>Math & Arts</b>:
+    </p>
+    <p>
+        Outside of the classroom, I've been studying math on my own, 
+        some of my learning notes (in Chinese) are posted <a href="./">here</a>. I am always fascinated by the process of generalization in mathematics, 
+        that's why I chose the word, <b>"Abstractness is the price of Generality"</b>, as the tagline for my website. It is said by <a href="https://www.3blue1brown.com/about">3Blue1Brown</a>, 
+        the initiation of my interest in math.
+    </p>
+    <p>
+        In my leisure time, I often draw, photograph or do some design. 
+        You can see some of my art work <a href="gallery.html">here</a>.
+    </p>
+</div>
+
+<div class = "experience">
+    <h2>Education</h2>
+    <div class="row">
+        <div class="col-sm-1-pad" align="center">
+            <p><img src="assets/img/uiuc.png" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-11">
+            <p><b>University of Illinois, Urbana-Champaign</b>, Sep. 2018 - Present<br>
+                B.S. in Computer Engineering<br>
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-1-pad" align="center">
+            <p><img src="assets/img/zju.png" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-11">
+            <p><b>Zhejiang University</b>, Sep. 2018 - Present<br>
+                B.E. in Electronics and Computer Engineering<br>
+            </p>
+        </div>
+    </div>
+</div>
+
+
+<div class="experience">
     <h2>Research & Work Experience</h2>
     <div class="row">
-        <div class="col-sm-11">
-            <p><b>All-hex Mesh Refinement</b>, Apr. 2021 - Present<br>
-                State Key Lab of CAD & CG, Zhejiang University<br>
-                Mentor: Jin Huang<br>
-            </p>
-        </div>
+        <p><b>All-hex Mesh Refinement</b>, Apr. 2021 - Present<br>
+            <i>State Key Lab of CAD & CG, Zhejiang University</i><br>
+            Mentor: Jin Huang<br>
+        </p>
     </div>
     <div class="row">
-        <div class="col-sm-11">
-            <p><b>Teaching Assistant for Calculus III (MATH 241)</b>, Sept. 2020 – Jan. 2021<br>
-                ZJUI institute<br>
-            </p>
-        </div>
+        <p><b>Teaching Assistant for Calculus III (MATH 241)</b>, Sept. 2020 – Jan. 2021<br>
+            <i>ZJUI institute</i><br>
+        </p>
     </div>
     <div class="row">
-        <div class="col-sm-11">
-            <p><b>Virtual Reality in Robot Assisted Surgical Training</b>, Jun. 2019 – Aug. 2019<br>
-                ZJUI institute<br>
-                Mentor: Liangjing yang<br>
-            </p>
-        </div>
+        <p><b>Virtual Reality in Robot Assisted Surgical Training</b>, Jun. 2019 – Aug. 2019<br>
+            <i>ZJUI institute</i><br>
+            Mentor: Liangjing yang<br>
+        </p>
     </div>
 </div>
 
-<div class="container">
+<div class="experience">
     <h2>Project</h2>
+    <div class="row">
+        <p>You can see my project <a href="project.html">here</a>.</p>
+    </div>
+</div>
+
+<div class="experience">
+    <h2>Activities Experience</h2>
+    <div class="row">
+        <div class="col-sm-4-pad" align="center">
+            <p><img src="assets/img/C&D.png" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-8">
+            <p><b>Design Event Posters</b>, Sept. 2019 – Aug. 2020<br>
+                <i>New Media Center, International Campus, Zhejiang University</i><br>
+                <!-- Core member of creative design department. Always gave the overall framework of the poster design. Posters are used in graduation ceremony, activity propoganda, etc.<br> -->
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4-pad" align="center">
+            <p><img src="assets/img/AidEd.jpg" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-8">
+            <p><b>Aid Education in Remote Mountains of China</b>, Aug. 2019<br>
+                <i>Jiaoma Center School, Jiaoma, Qiannan, Guizhou, China</i><br>
+                <!-- 2 weeks volunteer teaching in the local primary school. Taught arts & English and loved by students. Visited students’ family deep in the mountains and local government staffs to investigate local education and poverty relief condition.<br> -->
+            </p>
+        </div>
+    </div>
 </div>
