--- a/about.html
+++ b/about.html
@@ -85,7 +85,47 @@ title: About
 <div class="experience">
     <h2>Project</h2>
     <div class="row">
-        <p>You can see my project <a href="project.html">here</a>.</p>
+        <div class="col-sm-4-pad" align="center">
+            <p><img src="assets/img/TLEOS.png" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-8">
+            <p><b>TLEOS(Unix based Operating System)</b>, Apr. 2021<br>
+                <i>Course Project for ECE 391 Computer Systems Engineering</i><br>
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4-pad" align="center">
+            <p><img src="assets/img/FPGA.gif" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-8">
+            <p><b>FPGA-Based 3D Graphics Renderer</b>, Dec. 2020<br>
+                <i>Final Project for ECE 385 Digital System Laboratory</i><br>
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4-pad" align="center">
+            <p><img src="assets/img/raytracer.png" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-8">
+            <p><b>Monto Carlo Ray Tracer</b>, Dec. 2020<br>
+                <i>Computing Assignment for GAMES101 Introduction to Computer Graphics</i><br>
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4-pad" align="center">
+            <!-- <p><img src="assets/img/BLANK.png" class="img-fluid"></a></p> -->
+        </div>
+        <div class="col-sm-8">
+            <p><b>Index Structure Database with Stack-based Query Processing</b>, May. 2020<br>
+                <i>Computing Assignment for CS225 Data Structure</i><br>
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <p>You can see details of my project <a href="project.html">here</a>.</p>
     </div>
 </div>
 
