--- a/gallery.html
+++ b/gallery.html
@@ -1,21 +1,21 @@
 ---
 layout: default
-title: About
-images:
-  - https://images.unsplash.com/photo-1421789665209-c9b2a435e3dc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5b1016b885e7438c4633109d77368d4d&auto=format&fit=crop&w=1651&q=80
-  - https://images.unsplash.com/photo-1445962125599-30f582ac21f4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=38c096c472ba616dc4e8e76a8069c97a&auto=format&fit=crop&w=668&q=80
-  - https://images.unsplash.com/photo-1504626835342-6b01071d182e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=975855d515c9d56352ee3bfe74287f2b&auto=format&fit=crop&w=1651&q=80
-  - https://images.unsplash.com/photo-1476514525535-07fb3b4ae5f1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=468a8c18f5d811cf03c654b653b5089e&auto=format&fit=crop&w=1650&q=80
-  - https://images.unsplash.com/photo-1506291318501-948562d765d7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=71ad8e3b7b4bd210182ed5e5c024903b&auto=format&fit=crop&w=1650&q=80
-  - https://images.unsplash.com/photo-1500370414137-9201565cf099?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=95e700b9e28eb7ed7b5769c823741126&auto=format&fit=crop&w=668&q=80
-  - https://images.unsplash.com/photo-1500402448245-d49c5229c564?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f19c590b253f803a7f9b643c59017160&auto=format&fit=crop&w=1650&q=80
+title: Gallery
 ---
 
-<div class="container">
+<div class="container" id="photo">
+    <div class="row">
+        <nav class="jump-title">
+            <h2>
+                <b style="margin-right:8px">Photo</b>
+                <a href="#design">Design</a>
+                <a href="#painting">Painting</a>
+            </h2>
+        </nav>
+    </div>
     <div class="masonry">
-        {% for img in page.images %}
-        <div class="item">
-        <img src="{{ img }}" />
+        <!-- <div class="item">
+        <img src="" />
         <p>
             <b>Title Goes Here</b><br>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis quod et
@@ -23,9 +23,159 @@ images:
             dolore aut, quae quaerat architecto quisquam repudiandae amet nostrum
             quidem?<br>
         </p>
+        </div> -->
+        <div class="item">
+            <img src="\assets\img\gallery\photo\BrokenTime0.jpg" />
         </div>
-        {% endfor %}
+        <div class="item">
+            <img src="\assets\img\gallery\photo\ColorGreen.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Cat.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\LightShadow0.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Mirror0.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Sky0.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Dusk0.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Suzhou0.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Suzhou1.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Suzhou2.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\WestLakeRain4.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\BrokenTime1.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\ColorRed.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Eave.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\LightShadow1.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Mirror1.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Sky1.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Dusk1.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Suzhou3.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\WestLakeRain0.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\WestLakeRain1.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\BrokenTime2.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\ColorYellow.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Dancer.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Watch.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Three.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Maize.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Road.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\Suzhou4.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\WestLakeRain3.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\photo\WestLakeRain2.jpg" />
+        </div>
     </div>
 </div>
 
+<div class="container" id="design">
+    <div class="row">
+        <nav class="jump-title">
+            <h2>
+                <a href="#photo">Photo</a>
+                <b style="margin-right:8px">Design</b>
+                <a href="#painting">Painting</a>
+            </h2>
+        </nav>
+    </div>
+    <div class="masonry">
+        <div class="item">
+            <img src="\assets\img\gallery\design\trumpet3.png" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\design\JinYu.png" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\design\Manifold.png" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\design\trumpet2.png" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\design\ShiCao.png" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\design\Fcloth.jpg" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\design\trumpet1.png" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\design\F.png" />
+        </div>
+    </div>
+</div>
+
+<div class="container" id="painting">
+    <div class="row">
+        <nav class="jump-title">
+            <h2>
+                <a href="#photo">Photo</a>
+                <a href="#design">Design</a>
+                <b style="margin-right:8px">Painting</b>
+            </h2>
+        </nav>
+    </div>
+    <div class="masonry">
+        <div class="item">
+            <img src="\assets\img\gallery\painting\koakuma.png" />
+        </div>
+        <div class="item">
+            <img src="\assets\img\gallery\painting\slack.png" />
+        </div>
+    </div>
+</div>
+<!-- <script src="/assets/js/imagesloaded.pkgd.min.js"></script> -->
 
