--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@ title: Gallery
     <div class="row">
         <nav class="jump-title">
             <h2>
-                <b style="margin-right:8px">Photo</b>
+                <span style="margin-right:8px">Photo</span>
                 <a href="#design">Design</a>
                 <a href="#painting">Painting</a>
             </h2>
@@ -15,7 +15,7 @@ title: Gallery
     </div>
     <div class="masonry">
         <!-- <div class="item">
-        <img src="" />
+        <img class="pop-img" loading="lazy" src="" />
         <p>
             <b>Title Goes Here</b><br>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis quod et
@@ -25,97 +25,128 @@ title: Gallery
         </p>
         </div> -->
         <div class="item">
-            <img src="\assets\img\gallery\photo\BrokenTime0.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\BrokenTime0.jpg" 
+            alt="&quot I saw the broken time &quot <br> 2019.08 at Dongguan street, Yangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\ColorGreen.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\ColorGreen.jpg" 
+            alt="Green | 2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Cat.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Cat.jpg" 
+            alt="Cat | 2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\LightShadow0.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\LightShadow0.jpg" 
+            alt="2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Mirror0.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Mirror0.jpg"
+            alt="Mirror | 2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Sky0.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Sky0.jpg"
+            alt="Sky | 2019.08 at Hangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Dusk0.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Dusk0.jpg"
+            alt="2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Suzhou0.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Suzhou0.jpg"
+            alt="Suzhou | 2019.10 at Suzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Suzhou1.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Suzhou1.jpg"
+            alt="Suzhou | 2019.10 at Suzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Suzhou2.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Suzhou2.jpg"
+            alt="Suzhou | 2019.10 at Suzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\WestLakeRain4.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\WestLakeRain4.jpg"
+            alt="West Lake, Rain | 2019.08 at West Lake, Hangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\BrokenTime1.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\BrokenTime1.jpg"
+            alt="&quot I saw the broken time &quot <br> 2019.08 at Dongguan street, Yangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\ColorRed.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\ColorRed.jpg"
+            alt="Red | 2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Eave.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Eave.jpg"
+            alt="Eave | 2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\LightShadow1.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\LightShadow1.jpg"
+            alt="2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Mirror1.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Mirror1.jpg"
+            alt="Mirror | 2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Sky1.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Sky1.jpg"
+            alt="Sky | 2019.08 at Hangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Dusk1.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Dusk1.jpg"
+            alt="2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Suzhou3.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Suzhou3.jpg"
+            alt="Suzhou | 2019.10 at Suzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\WestLakeRain0.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\WestLakeRain0.jpg"
+            alt="West Lake, Rain | 2019.08 at West Lake, Hangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\WestLakeRain1.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\WestLakeRain1.jpg"
+            alt="West Lake, Rain | 2019.08 at West Lake, Hangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\BrokenTime2.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\BrokenTime2.jpg"
+            alt="&quot I saw the broken time &quot <br> 2019.08 at Dongguan street, Yangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\ColorYellow.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\ColorYellow.jpg"
+            alt="Yellow | 2019.07 at Hangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Dancer.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Dancer.jpg"
+            alt="Dancer | 2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Watch.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Watch.jpg"
+            alt="Watch | 2019.08 at Hangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Three.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Three.jpg"
+            alt="Three | 2019.05 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Maize.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Maize.jpg"
+            alt="Harvest | 2019.08 at Jiaoma, Qiannan, Guizhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Road.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Road.jpg"
+            alt="2019.07 at Haining, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\Suzhou4.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Suzhou4.jpg"
+            alt="Suzhou | 2019.10 at Suzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\WestLakeRain3.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\WestLakeRain3.jpg"
+            alt="West Lake, Rain | 2019.08 at West Lake, Hangzhou, China"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\photo\WestLakeRain2.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\WestLakeRain2.jpg"
+            alt="West Lake, Rain | 2019.08 at West Lake, Hangzhou, China"/>
         </div>
     </div>
 </div>
@@ -125,35 +156,61 @@ title: Gallery
         <nav class="jump-title">
             <h2>
                 <a href="#photo">Photo</a>
-                <b style="margin-right:8px">Design</b>
+                <span style="margin-right:8px">Design</span>
                 <a href="#painting">Painting</a>
             </h2>
         </nav>
     </div>
     <div class="masonry">
         <div class="item">
-            <img src="\assets\img\gallery\design\trumpet3.png" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\trumpet3.png"
+            alt="A work related to a meme on the Chinese internet | 2019.09"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\design\JinYu.png" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\JinYu.png"
+            alt="<b>禁鱼 Forbidden Fish</b> <br>
+            Avatar Design<br>
+            &quotFish&quot is a homonym for &quotdesires&quot in Chinese. The fish painting is originally painted by an ancient Chinese artist, Bada Shanren, from Ming dynasty. <br> 
+            2019.07"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\design\Manifold.png" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\Manifold.png"
+            alt="Differential Manifold | 2020.10"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\design\trumpet2.png" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\trumpet2.png"
+            alt="A work related to a meme on the Chinese internet | 2019.09"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\design\ShiCao.png" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\ShiCao.png"
+            alt="<b>十草 &quotTen Grass&quot</b> <br>
+            Avatar Design<br>
+            &quotTen&quot is a homonym for &quoteat&quot in Chinese. This work is inspired by a Japanese buzzword, 
+            &quotHerbivore men&quot, which describe a man who is &quotnot without romantic relationships, but have a non-assertive, indifferent attitude toward desires of flesh&quot, according to the word's creator.
+            The &quotgrass&quot in the avatar is actually orchid, which has a similar but more lofty meaning with &quotHerbivore men&quot in Chinese culture. It is painted by a famous Chinese artist, Qi Baishi. <br> 
+            2019.07"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\design\Fcloth.jpg" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\Fcloth.jpg"
+            alt="T-shirt Design <br>
+            For my RHET 102 professor Dr.F | 2018.10"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\design\trumpet1.png" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\trumpet1.png"
+            alt="A work related to a meme on the Chinese internet | 2019.09"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\design\F.png" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\singular.png"
+            alt="<b>Singular</b> <br>
+            Avatar Design<br>
+            A singular matrix is not invertible, so as the love in real life.<br> 
+            (In linear algebra, a matrix is not invertible if and only if its determinant is zero.) <br>
+            2019.07"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\F.png"
+            alt="T-shirt Design <br>
+            For my RHET 102 professor Dr.F | 2018.10"/>
         </div>
     </div>
 </div>
@@ -164,18 +221,62 @@ title: Gallery
             <h2>
                 <a href="#photo">Photo</a>
                 <a href="#design">Design</a>
-                <b style="margin-right:8px">Painting</b>
+                <span style="margin-right:8px">Painting</span>
             </h2>
         </nav>
     </div>
     <div class="masonry">
         <div class="item">
-            <img src="\assets\img\gallery\painting\koakuma.png" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\painting\koakuma.png"
+            alt="A copy of illustrator FKEY's work | 2019.07"/>
         </div>
         <div class="item">
-            <img src="\assets\img\gallery\painting\slack.png" />
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\painting\slack.png"/>
         </div>
     </div>
 </div>
-<!-- <script src="/assets/js/imagesloaded.pkgd.min.js"></script> -->
+
+<div id="imgModal" class="modal">
+    <span class="close" onclick="document.getElementById('imgModal').style.display='none'">&times;</span>
+    <img class="modal-content" id="imgTemp">
+    <div id="caption"></div>
+</div>
+
+<script>
+    var _imgs = [];
+    _imgs = document.getElementsByTagName('img');
+
+    var modal = document.getElementById('imgModal');
+    modal.addEventListener("webkitAnimationEnd", modalEnd, false);
+    modal.addEventListener("animationend", modalEnd, false);
+
+    var modalImg = document.getElementById("imgTemp");
+    var captionText = document.getElementById("caption");
+
+    for(var i = 0; i < _imgs.length; i++){
+        var img = _imgs[i];
+        // document.write(img.src+"<br>");
+        img.onclick = function(){
+            modal.style.webkitAnimationName = "fade-in";
+            modal.style.AnimationName = "fade-in";
+            modal.style.display = "block";
+            modalImg.src = this.src;
+            captionText.innerHTML = this.alt;
+        }
+    }
+
+    var span = document.getElementsByClassName("close")[0];
+    
+    span.onclick = function() {
+        modal.style.webkitAnimationName = "fade-out";
+        modal.style.AnimationName = "fade-out";
+    }
+
+    function modalEnd() {
+        if (modal.style.AnimationName == "fade-out") {
+            modal.style.display = "none";
+        }
+    }
+
+</script>
 
