--- a/about.html
+++ b/about.html
@@ -21,18 +21,17 @@ title: About
 <div class = "experience">
     <h2>Biography</h2>
     <p> Hi! I'm Zimu, a senior Computer Engineering student from the joint institute of <a href="https://www.zju.edu.cn/english/">Zhejiang University</a> - 
-        <a href="https://illinois.edu/"> University of Illinois at Urbana-Champaign</a>. I'm interested in <b>computer graphics</b> (especially <b>physically based simulation</b>) and
-        <b>high-performance computing</b>. It is because I'm a big fan of <b>Math & Arts</b>:
+        <a href="https://illinois.edu/"> University of Illinois at Urbana-Champaign</a>. I'm interested in <b>computer graphics</b> (especially <b>rendering and physically based simulation</b>). It is because I'm a big fan of <b>Math & Arts</b>:
     </p>
     <p>
         Outside of the classroom, I've been studying math on my own, 
         some of my learning notes (in Chinese) are posted <a href="./">here</a>. I am always fascinated by the process of generalization in mathematics, 
         that's why I chose the word, <b>"Abstractness is the price of Generality"</b>, as the tagline for my website. It is said by <a href="https://www.3blue1brown.com/about">3Blue1Brown</a>, 
-        the initiation of my interest in math.
+        one of the initiations of my interest in math.
     </p>
     <p>
         In my leisure time, I often draw, photograph or do some design. 
-        You can see some of my art work <a href="gallery.html">here</a>.
+        You can see some of my art works <a href="gallery.html">here</a>.
     </p>
 </div>
 
@@ -64,20 +63,27 @@ title: About
 <div class="experience">
     <h2>Research & Work Experience</h2>
     <div class="row">
-        <p><b>All-hex Mesh Refinement</b>, Apr. 2021 - Present<br>
+        <p><b>Adaptive All-hex Mesh Refinement For Physically Based Simulation</b>, Apr. 2021 - Present<br>
             <i>State Key Lab of CAD & CG, Zhejiang University</i><br>
             Mentor: Jin Huang<br>
+            - Exploring adaptive all-hexahedral mesh refinement methods to improve physically
+            based simulation.
         </p>
     </div>
     <div class="row">
         <p><b>Teaching Assistant for Calculus III (MATH 241)</b>, Sept. 2020 – Jan. 2021<br>
             <i>ZJUI institute</i><br>
+            - Hold discussion sessions every week and taught difficult concepts covered in course including lebesgue integral,
+            manifold, differential forms, etc. for engineering students. These sessions are famous among students, attracting
+            other sessions’ students to join in.<br>
         </p>
     </div>
     <div class="row">
         <p><b>Virtual Reality in Robot Assisted Surgical Training</b>, Jun. 2019 – Aug. 2019<br>
             <i>ZJUI institute</i><br>
             Mentor: Liangjing yang<br>
+            - Based on the robot assisted surgical, explore precise way on virtual reality
+            training, camera calibration and 3D reconstruction.<br>
         </p>
     </div>
 </div>
@@ -91,6 +97,8 @@ title: About
         <div class="col-sm-8">
             <p><b>TLEOS(Unix based Operating System)</b>, Apr. 2021<br>
                 <i>Course Project for ECE 391 Computer Systems Engineering</i><br>
+                <br><br>
+                <a href="https://github.com/TaKeTube/TLEOS">Code</a>
             </p>
         </div>
     </div>
@@ -101,6 +109,8 @@ title: About
         <div class="col-sm-8">
             <p><b>FPGA-Based 3D Graphics Renderer</b>, Dec. 2020<br>
                 <i>Final Project for ECE 385 Digital System Laboratory</i><br>
+                <br><br><br>
+                <a href="https://github.com/TaKeTube/FPGA-based-3D-graphics-renderer">Code</a>
             </p>
         </div>
     </div>
@@ -111,6 +121,8 @@ title: About
         <div class="col-sm-8">
             <p><b>Monto Carlo Ray Tracer</b>, Dec. 2020<br>
                 <i>Computing Assignment for GAMES101 Introduction to Computer Graphics</i><br>
+                <br><br><br><br><br>
+                <a href="https://github.com/TaKeTube/GAMES-101/tree/master/Assignment7">Code</a>
             </p>
         </div>
     </div>
@@ -121,11 +133,13 @@ title: About
         <div class="col-sm-8">
             <p><b>Index Structure Database with Stack-based Query Processing</b>, May. 2020<br>
                 <i>Computing Assignment for CS225 Data Structure</i><br>
+                <br><br>
+                <a href="https://github.com/TaKeTube/2SAM-Database">Code</a>
             </p>
         </div>
     </div>
     <div class="row">
-        <p>You can see details of my project <a href="project.html">here</a>.</p>
+        <p>You can see details of my projects <a href="project.html">here</a>.</p>
     </div>
 </div>
 
