--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@ title: About
     <div class="col-sm-7 text-center">
         <h1>Zimu Guan</h1>
         <ul>
-            <li>Email: <a href="zimug2@illinois.edu">zimug2@illinois.edu</a></li>
+            <li><a href="./assets/CV.pdf">CV</a></li>
+            <li>Email: <a href="mailto:zimug2@illinois.edu">zimug2@illinois.edu</a></li>
             <li>GitHub: <a href="https://github.com/TaKeTube">TaKeTube</a></li>
             <li>Linkedin: Zimu Guan</li>
         </ul>
@@ -25,7 +26,7 @@ title: About
     </p>
     <p>
         Outside of the classroom, I've been studying math on my own, 
-        some of my learning notes (in Chinese) are posted <a href="./">here</a>. I am always fascinated by the process of generalization in mathematics, 
+        some of my learning notes and blogs(in Chinese) are posted <a href="./">here</a>. I am always fascinated by the process of generalization in mathematics, 
         that's why I chose the word, <b>"Abstractness is the price of Generality"</b>, as the tagline for my website. It is said by <a href="https://www.3blue1brown.com/about">3Blue1Brown</a>, 
         one of the initiations of my interest in math.
     </p>
@@ -63,16 +64,24 @@ title: About
 <div class="experience">
     <h2>Research & Work Experience</h2>
     <div class="row">
-        <p><b>Adaptive All-hex Mesh Refinement For Physically Based Simulation</b>, Apr. 2021 - Present<br>
+        <p><b>Cut-and-Paste Neural Rendering</b>, Aug. 2021 – Dec. 2021<br>
+            <i>University of Illinois at Urbana-Champaign</i><br>
+            Mentor: David Forsyth<br>
+            - Create and annotate benchmark data set and evaluate the performance of the cut-and-paste neural renderer.
+        </p>
+    </div>
+    <div class="row">
+        <p><b>All-hexahedral Mesh Refinement with Flexible Density Control</b>, Apr. 2021 – Aug. 2021<br>
             <i>State Key Lab of CAD & CG, Zhejiang University</i><br>
             Mentor: Jin Huang<br>
-            - Exploring adaptive all-hexahedral mesh refinement methods to improve physically
-            based simulation.
+            - Build an adaptive all-hexahedral mesh refinement pipeline aiming to improve physically based simulation especially
+            finite element method. Solve the limitation of uneven density control of previous methods.
         </p>
     </div>
     <div class="row">
         <p><b>Teaching Assistant for Calculus III (MATH 241)</b>, Sept. 2020 – Jan. 2021<br>
             <i>ZJUI institute</i><br>
+            Instructor: Thomas Honold<br>
             - Hold discussion sessions every week and taught difficult concepts covered in course including lebesgue integral,
             manifold, differential forms, etc. for engineering students. These sessions are famous among students, attracting
             other sessions’ students to join in.<br>
