--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ title: About
     </p>
     <p>
         Outside of the classroom, I've been studying math on my own, 
-        some of my learning notes and blogs(in Chinese) are posted <a href="./">here</a>. I am always fascinated by the process of generalization in mathematics, 
+        some of my learning notes and blogs (in Chinese) are posted <a href="./">here</a>. I am always fascinated by the process of generalization in mathematics, 
         that's why I chose the word, <b>"Abstractness is the price of Generality"</b>, as the tagline for my website. It is said by <a href="https://www.3blue1brown.com/about">3Blue1Brown</a>, 
         one of the initiations of my interest in math.
     </p>
@@ -43,7 +43,7 @@ title: About
             <p><img src="assets/img/uiuc.png" class="img-fluid"></a></p>
         </div>
         <div class="col-sm-11">
-            <p><b>University of Illinois, Urbana-Champaign</b>, Sep. 2018 - Present<br>
+            <p><b>University of Illinois, Urbana-Champaign</b>, Aug. 2018 - May. 2022<br>
                 B.S. in Computer Engineering<br>
             </p>
         </div>
@@ -53,7 +53,7 @@ title: About
             <p><img src="assets/img/zju.png" class="img-fluid"></a></p>
         </div>
         <div class="col-sm-11">
-            <p><b>Zhejiang University</b>, Sep. 2018 - Present<br>
+            <p><b>Zhejiang University</b>, Aug. 2018 - May. 2022<br>
                 B.E. in Electronics and Computer Engineering<br>
             </p>
         </div>
@@ -67,32 +67,38 @@ title: About
         <p><b>Cut-and-Paste Neural Rendering</b>, Aug. 2021 – Dec. 2021<br>
             <i>University of Illinois at Urbana-Champaign</i><br>
             Mentor: David Forsyth<br>
-            - Create and annotate benchmark data set and evaluate the performance of the cut-and-paste neural renderer.
+            <!-- - Contributed to a project involving convincing cut-and-paste reshading with consistent image decomposition
+            inferences by creating a benchmark data set and evaluated the performance of the cut-and-paste neural renderer. -->
         </p>
     </div>
     <div class="row">
         <p><b>All-hexahedral Mesh Refinement with Flexible Density Control</b>, Apr. 2021 – Aug. 2021<br>
             <i>State Key Lab of CAD & CG, Zhejiang University</i><br>
             Mentor: Jin Huang<br>
-            - Build an adaptive all-hexahedral mesh refinement pipeline aiming to improve physically based simulation especially
-            finite element method. Solve the limitation of uneven density control of previous methods.
+            <!-- - Built a conformal unstructured all-hexahedral mesh refinement pipeline as a prototype aiming to improve
+            physically-based simulation, especially the adaptive finite element method.<br>
+            - Researched existing hexahedral mesh optimization, generation, and refinement methods, transferred selective
+            padding method for mesh optimization to mesh refinement, solved the limitation of inflexible density control of
+            previous methods. -->
         </p>
     </div>
     <div class="row">
-        <p><b>Teaching Assistant for Calculus III (MATH 241)</b>, Sept. 2020 – Jan. 2021<br>
+        <p><b>Teaching Assistant for MATH 241 CALCULUS III</b>, Sept. 2020 – Jan. 2021<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
-            - Hold discussion sessions every week and taught difficult concepts covered in course including lebesgue integral,
-            manifold, differential forms, etc. for engineering students. These sessions are famous among students, attracting
-            other sessions’ students to join in.<br>
+            <!-- - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
+            manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
+            better understand the materials, attracted other sessions’ students to join in.<br> -->
         </p>
     </div>
     <div class="row">
         <p><b>Virtual Reality in Robot Assisted Surgical Training</b>, Jun. 2019 – Aug. 2019<br>
             <i>ZJUI institute</i><br>
             Mentor: Liangjing yang<br>
-            - Based on the robot assisted surgical, explore precise way on virtual reality
-            training, camera calibration and 3D reconstruction.<br>
+            <!-- - Researched 3D reconstruction, integrated VisualSFM 3D reconstruction tool into a virtual reality robot-assisted
+            surgical system.<br>
+            - Technically supported other parts of the surgical system, including a unity-based virtual reality surgical
+            environment and an Arduino-based voice-controlled robotic arm.<br> -->
         </p>
     </div>
 </div>
@@ -104,7 +110,7 @@ title: About
             <p><img src="assets/img/TLEOS.png" class="img-fluid"></a></p>
         </div>
         <div class="col-sm-8">
-            <p><b>TLEOS(Unix based Operating System)</b>, Apr. 2021<br>
+            <p><b>TLEOS (Unix based Operating System)</b>, Apr. 2021<br>
                 <i>Course Project for ECE 391 Computer Systems Engineering</i><br>
                 <br><br>
                 <a href="https://github.com/TaKeTube/TLEOS">Code</a>
