--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@ title: About
 </div>
 
 <div class="experience">
-    <h2>Activities Experience</h2>
+    <h2>Extracurricular Activities</h2>
     <div class="row">
         <div class="col-sm-4-pad" align="center">
             <p><img src="assets/img/C&D.png" class="img-fluid"></a></p>
