small change on introduction; TA experience

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ title: About
 <div class = "experience">
     <h2>Biography</h2>
     <p> Hi! I'm Zimu, a senior Computer Engineering student from the joint institute of <a href="https://www.zju.edu.cn/english/">Zhejiang University</a> - 
-        <a href="https://illinois.edu/"> University of Illinois at Urbana-Champaign</a>. I'm interested in <b>computer graphics</b> (especially <b>rendering and physically based simulation</b>). It is because I'm a big fan of <b>Math & Arts</b>:
+        <a href="https://illinois.edu/"> University of Illinois at Urbana-Champaign</a>. I'm interested in <b>computer graphics</b> (especially <b>rendering and physically based animation</b>). It is because I'm a big fan of <b>Math & Arts</b>:
     </p>
     <p>
         Outside of the classroom, I've been studying math on my own, 
@@ -62,7 +62,7 @@ title: About
 
 
 <div class="experience">
-    <h2>Research & Work Experience</h2>
+    <h2>Research Experience</h2>
     <div class="row">
         <p><b>Cut-and-Paste Neural Rendering</b>, Aug. 2021 – Dec. 2021<br>
             <i>University of Illinois at Urbana-Champaign</i><br>
@@ -76,19 +76,10 @@ title: About
             <i>State Key Lab of CAD & CG, Zhejiang University</i><br>
             Mentor: Jin Huang<br>
             <!-- - Built a conformal unstructured all-hexahedral mesh refinement pipeline as a prototype aiming to improve
-            physically-based simulation, especially the adaptive finite element method.<br>
+            physically-based animation, especially the adaptive finite element method.<br>
             - Researched existing hexahedral mesh optimization, generation, and refinement methods, transferred selective
             padding method for mesh optimization to mesh refinement, solved the limitation of inflexible density control of
             previous methods. -->
-        </p>
-    </div>
-    <div class="row">
-        <p><b>Teaching Assistant for MATH 241 CALCULUS III</b>, Sept. 2020 – Jan. 2021<br>
-            <i>ZJUI institute</i><br>
-            Instructor: Thomas Honold<br>
-            <!-- - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
-            manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
-            better understand the materials, attracted other sessions’ students to join in.<br> -->
         </p>
     </div>
     <div class="row">
@@ -99,6 +90,29 @@ title: About
             surgical system.<br>
             - Technically supported other parts of the surgical system, including a unity-based virtual reality surgical
             environment and an Arduino-based voice-controlled robotic arm.<br> -->
+        </p>
+    </div>
+</div>
+
+
+<div class="experience">
+    <h2>Teaching Experience</h2>
+    <div class="row">
+        <p><b>Teaching Assistant for MATH 286 Introduction to Differential Equation Plus</b>, Jan. 2022 – May. 2022<br>
+            <i>ZJUI institute</i><br>
+            Instructor: Thomas Honold<br>
+            <!-- - Held discussion sessions every week and taught engineering students difficult topics covered in the course, including Banach Fixed Point Theorem,
+            Picard–Lindelöf Theorem, parts of Fourier analysis, etc. Made videos and Geogebra scripts to help students
+            better understand the materials, attracted other sessions’ students to join in.<br> -->
+        </p>
+    </div>
+    <div class="row">
+        <p><b>Teaching Assistant for MATH 241 CALCULUS III</b>, Sept. 2020 – Jan. 2021<br>
+            <i>ZJUI institute</i><br>
+            Instructor: Thomas Honold<br>
+            <!-- - Held discussion sessions every week and taught engineering students difficult topics covered in the course, including Lebesgue integral,
+            manifolds, and differential forms. Made videos and Geogebra scripts to help students
+            better understand the materials, attracted other sessions’ students to join in.<br> -->
         </p>
     </div>
 </div>
