small change on experience

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@ title: About
 <div class="experience">
     <h2>Teaching Experience</h2>
     <div class="row">
-        <p><b>Teaching Assistant for MATH 286 Introduction to Differential Equation Plus</b>, Jan. 2022 – May. 2022<br>
+        <p><b>Teaching Assistant for MATH 286 Intro to Differential Equation Plus</b>, Jan. 2022 – May. 2022<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
             <!-- - Held discussion sessions every week and taught engineering students difficult topics covered in the course, including Banach Fixed Point Theorem,
